制作 PostDetail 的 UI

--- a/src/assets/general.css
+++ b/src/assets/general.css
@@ -3,3 +3,13 @@ body {
 
     background-color: var(--el-color-info-light-9);
 }
+
+.markdown {
+    h1, h2, h3, h4, h5, h6 {
+        margin: 0.5em 0;
+    }
+
+    p {
+        margin: 0.8em 0;
+    }
+}
